[package]
name = "cv_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
opencv = "0.94.1"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
